adl-backend/src/test/resources/functional/error/helloworldSplitImpl/Client.adl
primitive error.helloworldSplitImpl.Client {
  
  provides Main as main;
  requires Service as sa ;
  
  source client.c;
}
